# TradeBot

./: .cursorignore  .gitignore  backfill_historical.py  main.py  pyproject.toml  test_connection.py  test_data_pipeline.py  test_kronos.py  test_paper_trading.py
config/: settings.py
core/: __init__.py  backtest_schema.py  backtester.py  data_fetcher.py  exchange_client.py  paper_broker.py  trade_ledger.py
strategies/: __init__.py  base.py  ensemble.py  indicators.py  kelly_sizer.py  kronos.py  kronos_model.py  momentum.py  schema.py  utils.py  value_edge.py
tests/: conftest.py  test_backtester_pipeline.py  test_ensemble.py  test_indicators.py  test_kelly_sizer.py  test_kronos_strategy.py  test_momentum_strategy.py  test_strategy_base.py  test_value_edge_strategy.py
